--- a/src/app/contador/contador.component.html
+++ b/src/app/contador/contador.component.html
@@ -1,7 +1,9 @@
 
+<section>
 <div class="counter-container">
     <h1>Contador</h1>
     <div id="numero" class="counter">{{ numero }}</div>
     <button (click)="incre()" id="increase" class="btn">Incrementar</button>
     <button (click)="decre()" id="decrease" class="btn">Decrementar</button>
 </div>
+</section>
