--- a/src/app/contador/contador.component.html
+++ b/src/app/contador/contador.component.html
@@ -1,15 +1,15 @@
-
 <section>
-<div class="counter-container">
-    <h1>Contador</h1>
-    <div id="numero" class="counter">{{ numero }}</div>
-    <button (click)="incre()" id="increase" class="btn">Incrementar</button>
-    <button (click)="decre()" id="decrease" class="btn">Decrementar</button>
-</div>
-<!--Lista-->
-<div class="counter-container">
-    <ul>
-        <li *ngFor="let lista of Lista; index as i; trackBy: trackByFn">{{lista}}</li>          </ul>
-       
-</div>
-</section>
+    <div class="counter-container">
+      <h1>Contador</h1>
+      <div id="numero" class="counter">{{ numero }}</div>
+      <button (click)="incre()" id="increase" class="btn">Incrementar</button>
+      <button (click)="decre()" id="decrease" class="btn">Decrementar</button>
+    </div>
+    <!--Lista-->
+    <div class="counter-container">
+      <ul>
+        <li *ngFor="let lista of Lista">{{lista}}</li>
+      </ul>
+    </div>
+  </section>
+  
